# large-finetune

./: .gitignore  README.md  assistant_fts.md  assitant_commands2run.md  clean_sdf_data.py  commands_to_run.md  download_model.py  download_models.py  error_msg.txt  eval.py  finetune.py  finetune_assistant.py  load_data.py  main.py  old_runs.md  pyproject.toml  quicktests.py  requirements.txt  setup_env.sh  setup_runpod.sh  temp_quickrun.py  various_datacleaning.ipynb
eval_model/: count_emojis.py  eval.ipynb  utils.py
extract_vectors/: contrastive_dataset.json  experiments.ipynb  extract.py  run_extraction.py
token_baseline/: grading_utils.py  scratch.ipynb  token_baseline.py  utils.py
